Mon Sep 29 07:53:45 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2429_Regression/client.cpp
        * tests/Bug_2935_Regression/middle.cpp
        * tests/Bug_2935_Regression/sink.cpp
        * tests/Bug_2935_Regression/source_i.h
        * tests/Bug_2936_Regression/PersistentPOA.cpp
        * tests/Bug_2936_Regression/PersistentPOA.h
        * tests/Collocated_Forwarding/Server_Request_Interceptor.cpp
        * tests/Exposed_Policies/Policy_Tester.cpp
        * tests/Exposed_Policies/Policy_Tester.h
        * tests/Hang_Shutdown/client.cpp
        * tests/InterOp-Naming/Server_i.cpp
        * tests/InterOp-Naming/Server_i.h
        * tests/OBV/Simple/Client_i.cpp
        * tests/OBV/Simple/Simple_util.cpp
        * tests/OBV/Simple/Simple_util.h
        * tests/POA/TIE/client.cpp
        * tests/QtTests/client.cpp
        * tests/RTCORBA/Bug_3382_Regression/client.cpp
        * tests/RTCORBA/Bug_3382_Regression/server.cpp
        * tests/TransportCurrent/Framework/simple.cpp
        * tests/Xt_Stopwatch/client.cpp
          ACE_TCHAR changes

Mon Sep 29 07:44:45 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PI/ORBInitInfo.h:
        * tao/Utils/ORB_Manager.cpp:
          ACE_TCHAR changes

Mon Sep 29 07:42:45 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/ImplRepo_Service/tao_imr_i.cpp
        * orbsvcs/ImplRepo_Service/tao_imr_i.h
        * orbsvcs/Naming_Service/NT_Naming_Service.h
        * orbsvcs/Notify_Service/NT_Notify_Service.h
        * orbsvcs/orbsvcs/AV/Endpoint_Strategy_T.cpp
        * orbsvcs/orbsvcs/AV/Endpoint_Strategy_T.h
        * orbsvcs/orbsvcs/CosEvent/CEC_Default_Factory.cpp
        * orbsvcs/orbsvcs/Event/EC_Basic_Factory.cpp
        * orbsvcs/orbsvcs/Event/EC_Default_Factory.cpp
        * orbsvcs/orbsvcs/Event/EC_Gateway_IIOP_Factory.cpp
        * orbsvcs/orbsvcs/Event/EC_Null_Factory.cpp
        * orbsvcs/orbsvcs/FaultTolerance/FT_ServerRequest_Interceptor.cpp