@@ -53,7 +53,7 @@ Task_State::Task_State (void)
 }
 
 int
-Task_State::parse_args (int argc,char *argv[])
+Task_State::parse_args (int argc,ACE_TCHAR *argv[])
 {
   ACE_Get_Opt opts (argc, argv, ACE_TEXT("mu:n:t:d:rxof:g:1cl"));
   int c;
